删除旧版gson，迁移效果至effect