@@ -30,7 +30,6 @@ minecraft {
             property 'forge.logging.console.level', 'info'
             property 'forge.logging.log4j.level', 'INFO'
             property 'forge.enabledGameTestNamespaces', 'blockpower'
-            jvmArgs '--add-opens=java.base/java.lang=com.google.gson', '--add-opens=java.base/java.util=com.google.gson'
             mods {
                 blockpower {
                     source sourceSets.main
@@ -42,7 +41,6 @@ minecraft {
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'info'
             property 'forge.logging.log4j.level', 'INFO'
-            jvmArgs '--add-opens=java.base/java.lang=com.google.gson', '--add-opens=java.base/java.util=com.google.gson'
             mods {
                 blockpower {
                     source sourceSets.main
@@ -110,23 +108,4 @@ publishing {
             url "file://${project.projectDir}/mcmodsrepo"
         }
     }
-}
-
-jar {
-
-    manifest {
-
-        attributes([
-
-                // 将 "--add-opens=java.base/java.lang=com.google.gson"
-
-                // 的信息添加到 MANIFEST.MF 文件中。
-
-                // 这是Java 9+ 模块系统的标准做法。
-
-                "Add-Opens": "java.base/java.lang=com.google.gson java.base/java.util=com.google.gson"
-        ])
-
-    }
-
 }
